# aria-2.0.1

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/realtime_subtitles/: __init__.py  logger.py  main.py  pipeline.py  settings_manager.py  timezone_utils.py  vosk_pipeline.py
src/realtime_subtitles/audio/: buffer.py  capture.py
src/realtime_subtitles/i18n/: en.py  zh_CN.py  zh_TW.py
src/realtime_subtitles/livecaptions/: __init__.py  controller.py  manager.py  monitor.py  pipeline.py
src/realtime_subtitles/model_manager/: manager.py
src/realtime_subtitles/transcription/: sherpa_transcriber.py  vosk_transcriber.py  whisper_transcriber.py
src/realtime_subtitles/translation/: translator.py
src/realtime_subtitles/ui/: app.py  settings_window.py  subtitle_overlay.py  system_tray.py
