[project]
name = "aria-subtitles"
version = "0.1.0"
description = "ARIA - AI Realtime Intelligent Audio | Universal Real-time AI Subtitles"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "sayksii", email = "mark42967151@gmail.com" }
]
keywords = ["subtitle", "speech-recognition", "whisper", "real-time", "accessibility", "transcription"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "numpy>=1.24.0",
    "faster-whisper>=1.0.0",
    "PyAudioWPatch>=0.2.12.6",
    "customtkinter>=5.2.0",
    "pystray>=0.19.0",
    "pillow>=10.0.0",
    "vosk>=0.3.45",
    "sherpa-onnx>=1.10.0",
    "ctranslate2>=4.0.0",
    "sentencepiece>=0.1.99",
    "huggingface_hub>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/sayksii/aria"
Repository = "https://github.com/sayksii/aria"
Issues = "https://github.com/sayksii/aria/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
aria = "realtime_subtitles.ui:run_app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/realtime_subtitles"]

[tool.ruff]
line-length = 120
target-version = "py310"
